2017-08-21  Michael Meissner  <meissner@linux.vnet.ibm.com>

	* config/rs6000/rs6000-cpus.def (-mvsx-scalar-float): Delete
	undocumented debugging options.
	(-mvsx-scalar-double): Likewise.
	(-mallow-df-permute): Likewise.
	(-mvectorize-builtins): Likewise.
	* config/rs6000/rs6000.c (rs6000_init_hard_regno_mode_ok):
	Likewise.
	(rs6000_builtin_vectorized_function): Likewise.
	(rs6000_builtin_md_vectorized_function): Likewise.
	(rs6000_opt_vars): Likewise.

2017-08-21  Uros Bizjak  <ubizjak@gmail.com>

	PR target/46091
	* config/i386/i386.md (*btsq_imm): Rename from *btsq.
	(*btrq_imm): Rename from *btrq.
	(*btcq_imm): Rename from *btcq.
	(btsc): New code attribute.
	(*<btsc><mode>): New insn pattern.
	(*btr<mode>): Ditto.
	(*<btsc><mode>_mask): New insn_and_split pattern.
	(*btr<mode>_mask): Ditto.

2017-08-21  Richard Sandiford  <richard.sandiford@linaro.org>
	    Alan Hayward  <alan.hayward@arm.com>
	    David Sherwood  <david.sherwood@arm.com>

	* function.c (pad_below): Simplify padding calculation.

2017-08-21  Richard Sandiford  <richard.sandiford@linaro.org>
	    Alan Hayward  <alan.hayward@arm.com>
	    David Sherwood  <david.sherwood@arm.com>

	* target.def (function_prologue): Remove frame size argument.
	(function_epilogue): Likewise.
	* doc/tm.texi: Regenerate.
	* final.c (final_start_function): Update call to function_prologue.
	(final_end_function): Update call to function_epilogue.
	(default_function_pro_epilogue): Remove frame size argument.
	* output.h (default_function_pro_epilogue): Likewise.
	* config/arm/arm.c (arm_output_function_epilogue): Likewise.
	(arm_output_function_prologue): Likewise.
	* config/frv/frv.c (frv_function_prologue): Likewise.
	(frv_function_epilogue): Likewise.
	* config/i386/i386.c (ix86_output_function_epilogue): Likewise.
	* config/ia64/ia64.c (ia64_output_function_prologue): Likewise.
	(ia64_output_function_epilogue): Likewise.
	* config/m32r/m32r.c (m32r_output_function_prologue): Likewise.